# Porc

./: .gitignore  CMakeLists.txt  README.md  TODO.md  generate_token_data.py  harder_test.porc  harder_test.porc.json  harder_test.txt  jsonToDot.py  memory.md  simpleCompile.sh  snake_to_upper_removing.sh  test.porc  test.txt  type_system.md
app/: main.cpp
compiler/: ast.hpp  byte_code_writer.cpp  byte_code_writer.hpp  logger.hpp  printer_helpers.cpp  printer_helpers.hpp  reader.cpp  reader.hpp  table.hpp  token_data.cpp  token_list.inc
compiler/source_docs/: ParsingAndTokenizing.md
docs/: Bytecode.md  ContributerGuide.md  EBNF.md  LanguageGuide.md  LanguageGuide.old.md  LearnPorcInYMins.md  OptimisationTips.md  PIR.md  StackFrames.md  changelog.md  macros.md  newPorc.md  styleguide.md  syntax.md  types.md
interpreter_common/: README.md  chunk.c  chunk.h  debug.c  debug.h  memory.c  memory.h  module.c  module.h  opcodes.h  porc_common.h  types.h
lib/: CLI11.hpp  expected.hpp
src/: AST.h  ast.c  ast.cpp  ast.hpp  byte_code_pass.cpp  byte_code_writer.cpp  byte_code_writer.hpp  defs.hpp  err.h  err_stream.cpp  err_stream.hpp  err_type.h  helper.hpp  macro_pass.cpp  macro_pass.inc  main.c  main.cpp  map.c  map.h  object.hpp  obsidian.h  option.h  parser.cpp  parser.h  parser.hpp  pass_data.cpp  pass_data.hpp  pass_manager.cpp  pass_manager.hpp  printer_helpers.cpp  printer_helpers.hpp  reader.cpp  reader.hpp  ssa_pass.cpp  ssa_pass.inc  str.c  str.h  str_prefs.h  table.cpp  token.cpp  (+17 more)
tests/: README.md  basic.porc  basic.porc.json  basic.porc.json.dot  range.porc  range.porc.json  test_function.porc  test_function.porc.json  wildcard.porc
tests/test_output/: test_output.cpp
